03-SSL-Uygulama/Whoami/01-Staging/06-Whoami-Staging-Stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-uygulama
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-uygulama
  template:
    metadata:
      labels:
        app: whoami-uygulama
    spec:
      containers:
      - name: whoami-konteyneri
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-servisi
  labels:
    app: whoami-uygulama
spec:
  type: NodePort
  selector:
    app: whoami-uygulama
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - whoami.techakademi.com
    secretName: whoami-uygulama-tls-staging
  rules:
  - host: whoami.techakademi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-servisi
            port:
              number: 80
